Un cliente despues de registrarse con sus datos personales: - Debe afiliarse a una Barbería.
Rutas:
- /api/cliente/barbershop_affiliate: Afiliarse a una Barbería [Autorizacion: Bearer {token}] -> requiere: [ barbershop_id ]
