# Backend/Barberia/routes/api.php
@@ -1,13 +1,10 @@
 <?php
 
-use App\Http\Controllers\Api\BarberoController;
 use App\Http\Controllers\Api\CitaController;
-use App\Http\Controllers\Api\ClienteController;
-use App\Http\Controllers\Api\DuenoController;
+use App\Http\Controllers\Api\Cliente\ClienteController;
 use App\Http\Controllers\Api\UserController;
 use App\Http\Controllers\Auth\Login\LoginController;
 use App\Http\Controllers\Auth\Register\RegisterController;
-use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
 // Route::get('/user', function (Request $request) {
@@ -33,5 +30,13 @@ Route::prefix('/auth')->group(function () {
         Route::get('/profile', [UserController::class, 'profile']);
         Route::get('/logout', [UserController::class, 'logout']);
         // Route::post('/refresh', [LoginController::class, 'refresh']);
+    });
+});
+
+// Rutas para el perfil del cliente
+Route::prefix('/cliente')->group(function () {
+    // Rutas protegidas
+    Route::middleware('auth:sanctum')->group(function () {
+        Route::put('/barbershop_affiliate', [ClienteController::class, 'barbershopAffiliate']);
     });
 });
